2005-09-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/Class+Meth.R: new tests; t(t(m)) == m

	* src/dtCMatrix.c (tsc_transpose): add forgotten "diag" slot

	* src/dsTMatrix.c (dsTMatrix_as_dsCMatrix): bad typo (segfault!)
	* src/dtTMatrix.c (dtTMatrix_as_dtCMatrix): new

	* R/dspMatrix.R: typo in "t" method

2005-09-18  Douglas Bates  <bates@wisc.edu>

	* R/AllClass.R (TsparseMatrix), CsparseM* and RsparseM*
	* R/Tsparse.R: instead of R/gTMatrix.R
	* R/Csparse.R: new
	* src/Tsparse.c (Tsparse_to_Csparse): new; -> cholmod_()
	* src/Tsparse.c: new; many trivial methods calling cholmod_()
	* src/Csparse.c (Csparse_to_Tsparse), transpose, (mat|cross)prod:
			via cholmod

2005-09-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (non0ind): new function using new C code
	* src/dgCMatrix.c (compressed_non_0_ij): new utility

2005-09-15  Douglas Bates  <bates@localhost.localdomain>

	* src/chm_common.h: header file required by all C sources that
	call CHOLMOD functions.  It defines a cholmod_common structure
	called 'c' whose address is passed as the last argument to
	(virtually) every CHOLMOD function.

	* src/Pattern.c: Simple example of the use of CHOLMOD.

	* src/init.c: initialize and finalize the cholmod_common structure.

	* src/Makefile: Added source packages CHOLMOD UMFPACK AMD COLAMD
	LDL and CCOLAMD from the U. of Florida sparse matrix library.

2005-09-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* inst/test-tools.R: new file collecting the utility functions used
		in ./tests/*.R

	* R/ddenseMatrix.R (cbind2): new methods for "numeric" and "matrix"
	* R/Matrix.R (cbind2): methods for NULL and missing

2005-08-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R: new "index" class for "[" and "[<-":
		First cut at "symmetricMatrix" and "triangularMatrix"
	* R/gTMatrix.R (.ind.prep): new function;
	        Logical and character indexing now work too.
	* R/Matrix.R: cheap "[<-" methods for denseMatrix now work